--- a/Css/styleAdmin.css
+++ b/Css/styleAdmin.css
@@ -3,13 +3,15 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  min-height: 100vh;
 }
 .sidebar {
   width: 250px;
   background-color: #4834d4;
   color: white;
-  height: auto;
+  height: 100vh;
   padding: 20px 0;
+  position: fixed;
 }
 .sidebar h2 {
   margin: 0;
@@ -44,6 +46,7 @@ body {
   flex-grow: 1;
   padding: 20px;
   background-color: #f0f0f0;
+  margin-left: 250px;
 }
 .dashboard-header {
   display: flex;
