--- a/Css/styleAdmin.css
+++ b/Css/styleAdmin.css
@@ -57,6 +57,7 @@ body {
   background-color: white;
   border-radius: 5px;
   padding: 20px;
+  margin: 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   flex-basis: calc(25% - 15px);
 }
